external-crates/move/crates/move-compiler/tests/move_check/parser/type_mut_space.move
module a::m {
    struct S {
        f: u64,
    }
    public fun foo(x: & mut S): & mut S {
        s
    }
}
